# storage/api-docs/api-docs.json
@@ -38,6 +38,61 @@
                         "description": "Forbidden"
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "Articles"
+                ],
+                "summary": "Store new Article",
+                "description": "Create new article",
+                "operationId": "createArticle",
+                "requestBody": {
+                    "description": " comment credentials",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "body",
+                                    "subject",
+                                    "image"
+                                ],
+                                "properties": {
+                                    "body": {
+                                        "type": "string",
+                                        "format": "body",
+                                        "example": "This is my first comment"
+                                    },
+                                    "subject": {
+                                        "type": "string",
+                                        "format": "subject",
+                                        "example": "Happy codding"
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "image",
+                                        "example": "https://via.placeholder.com/300/09f/fff.png"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
             }
         },
         "/articles/{id}": {
